# audio_analyzer

./: .gitignore  LICENSE  README.md  backlog  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/audio_analyzer/: MainActivity.kt
android/app/src/main/kotlin/com/magicpoulp/audio_analyzer/: MainActivity.kt
fftw_plugin/: CMakeLists.txt  Makefile  README.md
fftw_plugin/fftw_library/: VERSION
fftw_plugin/fftw_library/lib/: libfftw3.la  libfftw3.so.3.5.8
fftw_plugin/fftw_library/lib/cmake/fftw3/: FFTW3Config.cmake
fftw_plugin/fftw_library/lib/pkgconfig/: fftw3.pc
fftw_plugin/src/: fftw_plugin.cpp  fftw_plugin.h  test.cpp
gestures/: .metadata  README.md  pubspec.yaml
gestures/android/app/: build.gradle
gestures/android/app/src/main/: AndroidManifest.xml
gestures/android/app/src/main/kotlin/com/example/gestures/: MainActivity.kt
gestures/ios/Runner.xcodeproj/: project.pbxproj
gestures/lib/: main.dart  my_painter.dart
ios/Flutter/: AppFrameworkInfo.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: AudioAnalyzer.dart  FftPlot.dart  FftPlotScreen.dart  main.dart
license/: LICENSE  source
test/: widget_test.dart
